Document mainnet INTERN deployment
Add Base mainnet token address + BaseScan link, update verification instructions (BASESCAN_API_KEY), and refresh Railway guidance to prefer SOCIAL_MODE=x_api.

--- a/based-intern/.env.example
+++ b/based-intern/.env.example
@@ -8,6 +8,9 @@ CHAIN="base-sepolia"
 BASE_SEPOLIA_RPC_URL="https://YOUR_BASE_SEPOLIA_RPC_URL"
 BASE_RPC_URL="https://YOUR_BASE_RPC_URL"
 
+# BaseScan (optional): used for `npx hardhat verify ...` on Base + Base Sepolia
+BASESCAN_API_KEY=""
+
 # Optional override
 # RPC_URL=""
 
