feat: add Aerodrome DEX integration for trading and price oracle

--- a/based-intern/.env.example
+++ b/based-intern/.env.example
@@ -38,6 +38,17 @@ ROUTER_TYPE="unknown"
 # POOL_ADDRESS=""
 # WETH_ADDRESS=""
 
+# ========================
+# Aerodrome (Base DEX)
+# ========================
+# Set these when ROUTER_TYPE=aerodrome
+# ROUTER_TYPE="aerodrome"
+# ROUTER_ADDRESS="0xcF77a3Ba9A5CA922176B76f7201d8933374ff5Ac"
+# POOL_ADDRESS="0x..." (INTERN/WETH pool address)
+# WETH_ADDRESS="0x4200000000000000000000000000000000000006" (Base WETH)
+# AERODROME_STABLE="false" (true for stable pairs, false for volatile)
+# AERODROME_GAUGE_ADDRESS="0x..." (optional, for gauge rewards)
+
 # =========================
 # Social posting
 # =========================
