docs: add Aerodrome WETH/INTERN pool address (0x4dd4e1bf48e9ee219a6d431c84482ad0e5cf9ccc)

--- a/based-intern/.env.example
+++ b/based-intern/.env.example
@@ -44,9 +44,9 @@ ROUTER_TYPE="unknown"
 # Set these when ROUTER_TYPE=aerodrome
 # ROUTER_TYPE="aerodrome"
 # ROUTER_ADDRESS="0xcF77a3Ba9A5CA922176B76f7201d8933374ff5Ac"
-# POOL_ADDRESS="0x..." (INTERN/WETH pool address)
+# POOL_ADDRESS="0x4dd4e1bf48e9ee219a6d431c84482ad0e5cf9ccc" (WETH/INTERN volatile pool on Aerodrome)
 # WETH_ADDRESS="0x4200000000000000000000000000000000000006" (Base WETH)
-# AERODROME_STABLE="false" (true for stable pairs, false for volatile)
+# AERODROME_STABLE="false" (false for volatile WETH/INTERN pair, 0.3% fee)
 # AERODROME_GAUGE_ADDRESS="0x..." (optional, for gauge rewards)
 
 # =========================
