--- a/based-intern/package.json
+++ b/based-intern/package.json
@@ -10,6 +10,8 @@
     "build": "tsc -p tsconfig.json",
     "start": "node dist/src/index.js",
     "lint": "eslint .",
+    "test": "vitest --run",
+    "test:watch": "vitest",
     "build:contracts": "hardhat compile",
     "deploy:token": "hardhat run scripts/deploy-token.ts",
     "dev": "tsx src/index.ts",
@@ -33,6 +35,7 @@
     "ts-node": "^10.9.2",
     "tsx": "^4.21.0",
     "typescript": "^5.7.0",
-    "typescript-eslint": "^8.19.0"
+    "typescript-eslint": "^8.19.0",
+    "vitest": "^1.0.0"
   }
 }
