--- a/based-intern/tsconfig.json
+++ b/based-intern/tsconfig.json
@@ -11,9 +11,9 @@
     "outDir": "dist",
     "rootDir": ".",
     "resolveJsonModule": true,
-    "types": ["node"]
+    "types": ["node", "vitest/globals"]
   },
-  "include": ["src/**/*.ts", "hardhat.config.ts", "scripts/**/*.ts"],
+  "include": ["src/**/*.ts", "tests/**/*.ts", "hardhat.config.ts", "scripts/**/*.ts"],
   "exclude": ["dist", "node_modules"]
 }
 
