feat: implement Phase 1 X mentions poller (intent recognition, no trading)
New features:
- Add src/social/x_mentions.ts with mention polling and safe replies
  - Recognizes commands: help, status, buy, sell, why
  - Composes safe replies that acknowledge intent but never execute trades
  - Implements fingerprint-based deduplication to prevent duplicate replies
  - Uses X API v2 with OAuth 1.0a authentication
  - Respects rate limits and includes error handling

- Add 37 new comprehensive tests in tests/x_mentions.test.ts
  - Command parsing tests (case-insensitive, partial matching)
  - Reply composition tests (all command types, safety guarantees)
  - Reply length enforcement (max 240 chars)
  - Fingerprint deduplication tests
  - State management tests (lastSeenMentionId, repliedMentionFingerprints)
  - Safety guarantee tests (never mentions trading execution)

- Update src/agent/state.ts to track mention state
  - Add lastSeenMentionId for pagination
  - Add repliedMentionFingerprints (LRU list of 20)
  - Add lastSuccessfulMentionPollMs for poll interval tracking

- Update src/config.ts with new env vars
  - X_PHASE1_MENTIONS (boolean, default false)
  - X_POLL_MINUTES (number, default 2)

- Update src/index.ts main loop
  - Poll mentions at X_POLL_MINUTES interval when enabled
  - Runs before normal receipt posting
  - Continues normal loop even if mention polling fails

- Update .env.example with mention configuration

Safety guarantees:
- NEVER executes trades (Phase 1 intent only)
- NEVER bypasses guardrails
- Replies explain current guardrail status and constraints
- Deduplicates replies using deterministic fingerprints
- Handles API errors gracefully with circuit breaker awareness

Tests: 131 tests pass (94 existing + 37 new)
Build: TypeScript strict mode passes

--- a/based-intern/.env.example
+++ b/based-intern/.env.example
@@ -65,6 +65,11 @@ X_API_SECRET=""
 X_ACCESS_TOKEN=""
 X_ACCESS_SECRET=""
 
+# Optional: X Phase 1 Mentions Poller (Intent Recognition Only, No Trading)
+# Requires X_SOCIAL_MODE=x_api and X API credentials above
+X_PHASE1_MENTIONS="false"
+X_POLL_MINUTES="2"
+
 # =========================
 # LLM (optional)
 # =========================
