feat: add Base News Brain (dedupe, caps, tests)

--- a/based-intern/.env.example
+++ b/based-intern/.env.example
@@ -4,6 +4,11 @@
 WALLET_MODE="private_key"
 PRIVATE_KEY=""
 
+# Optional: CDP wallet mode (experimental)
+# WALLET_MODE="cdp"
+CDP_API_KEY_NAME=""
+CDP_API_KEY_PRIVATE_KEY=""
+
 CHAIN="base-sepolia"
 BASE_SEPOLIA_RPC_URL="https://YOUR_BASE_SEPOLIA_RPC_URL"
 BASE_RPC_URL="https://YOUR_BASE_RPC_URL"
@@ -25,12 +30,22 @@ DRY_RUN="true"
 TRADING_ENABLED="false"
 KILL_SWITCH="true"
 
+# Activity detection thresholds (event-driven receipts)
+# ETH threshold in ETH units
+MIN_ETH_DELTA="0.00001"
+# Token threshold in whole-token units (will be scaled by decimals)
+MIN_TOKEN_DELTA="1000"
+
 # Safety caps (even if you flip LIVE)
 DAILY_TRADE_CAP="2"
 MIN_INTERVAL_MINUTES="60"
 MAX_SPEND_ETH_PER_TRADE="0.0005"
 SELL_FRACTION_BPS="500"
 SLIPPAGE_BPS="300"
+
+# ERC20 approvals (used only for live trading paths)
+APPROVE_MAX="false"
+APPROVE_CONFIRMATIONS="1"
 
 # Router config (required to actually trade; otherwise agent holds)
 ROUTER_TYPE="unknown"
@@ -59,6 +74,9 @@ X_PASSWORD=""
 # Prefer cookies to reduce login friction
 X_COOKIES_PATH="./x_cookies.json"
 
+# Optional: provide cookies via env (Railway-friendly). Base64-encoded JSON.
+X_COOKIES_B64=""
+
 # Optional: X API mode (experimental)
 X_API_KEY=""
 X_API_SECRET=""
@@ -74,6 +92,39 @@ X_POLL_MINUTES="2"
 # LLM (optional)
 # =========================
 OPENAI_API_KEY=""
+
+# =========================
+# Base News Brain (optional)
+# =========================
+# Posts AI-generated (or deterministic fallback) commentary on Base ecosystem news.
+# Safety rules:
+# - Every news post MUST include a source URL.
+# - Posts are capped per day and rate-limited by interval.
+
+NEWS_ENABLED="false"
+
+# "event": post when there is at least 1 unseen news item
+# "daily": post only at NEWS_DAILY_HOUR_UTC (and at most once/day window)
+NEWS_MODE="event"
+
+NEWS_MAX_POSTS_PER_DAY="2"
+NEWS_MIN_INTERVAL_MINUTES="120"
+
+# Safety toggles
+NEWS_REQUIRE_LINK="true"
+NEWS_REQUIRE_SOURCE_WHITELIST="true"
+
+# Comma-separated list of supported sources:
+# - base_blog: https://blog.base.org/
+# - base_dev_blog: https://blog.base.dev/
+# - cdp_launches: https://www.coinbase.com/developer-platform/discover/launches
+NEWS_SOURCES="base_blog,base_dev_blog,cdp_launches"
+
+# Used only when NEWS_MODE=daily
+NEWS_DAILY_HOUR_UTC="15"
+
+# Max number of news items passed as context to the LLM tool
+NEWS_MAX_ITEMS_CONTEXT="8"
 
 # =========================
 # CDP (optional / experimental)
