Multi-instance support (STATE_PATH) + DEPLOYMENTS_FILE; fix scripts + lint config

--- a/based-intern/.env.example
+++ b/based-intern/.env.example
@@ -23,12 +23,44 @@ BASESCAN_API_KEY=""
 # TOKEN_ADDRESS=""
 
 # =========================
+# ERC-8004 (Trustless Agents)
+# =========================
+# If enabled and configured, receipts include:
+#   Agent: eip155:<chainId>:<identityRegistry>#<agentId>
+ERC8004_ENABLED="false"
+
+# Optional: set after deploy, or leave empty to read deployments/<network>.json
+# ERC8004_IDENTITY_REGISTRY=""
+
+# Optional: set after register-agent.ts (uint256 as decimal string)
+# ERC8004_AGENT_ID=""
+
+# Optional: agent registration file URI (ipfs://, https://, data:...)
+# ERC8004_AGENT_URI=""
+
+# Optional: script helpers for set-agent-wallet.ts
+# ERC8004_NEW_WALLET=""
+# ERC8004_NEW_WALLET_PRIVATE_KEY=""   # signs the EIP-712 payload as newWallet
+# ERC8004_WALLET_SIGNATURE=""         # or provide a precomputed signature (EOA or ERC-1271)
+# ERC8004_DEADLINE_SEC=""             # unix seconds; defaults to now+1h
+
+# =========================
 # Agent runtime
 # =========================
 LOOP_MINUTES="30"
 DRY_RUN="true"
 TRADING_ENABLED="false"
 KILL_SWITCH="true"
+
+# Multi-instance support
+# Run multiple agent processes safely by giving each instance its own state file.
+# Example: data/state.alice.json, data/state.bob.json
+STATE_PATH="data/state.json"
+
+# Optional: override which deployments file scripts read/write.
+# Useful if you want separate per-instance deployment metadata.
+# Example: deployments/alice.baseSepolia.json
+# DEPLOYMENTS_FILE="deployments/baseSepolia.json"
 
 # Activity detection thresholds (event-driven receipts)
 # ETH threshold in ETH units
