feat(news): add providers, scoring, and docs

--- a/based-intern/.env.example
+++ b/based-intern/.env.example
@@ -142,15 +142,36 @@ NEWS_MODE="event"
 NEWS_MAX_POSTS_PER_DAY="2"
 NEWS_MIN_INTERVAL_MINUTES="120"
 
+# Alias env keys (supported for compatibility with other deployments)
+# NEWS_POSTS_PER_DAY="2"
+# NEWS_INTERVAL_MINUTES="120"
+
 # Safety toggles
 NEWS_REQUIRE_LINK="true"
 NEWS_REQUIRE_SOURCE_WHITELIST="true"
 
 # Comma-separated list of supported sources:
+# - defillama: DeFiLlama snapshot (Base TVL + top protocols)
+# - github: GitHub Atom feeds (releases/commits)
+# - rss: RSS/Atom feeds (generic)
 # - base_blog: https://blog.base.org/
 # - base_dev_blog: https://blog.base.dev/
 # - cdp_launches: https://www.coinbase.com/developer-platform/discover/launches
-NEWS_SOURCES="base_blog,base_dev_blog,cdp_launches"
+NEWS_SOURCES="defillama,github,rss,base_blog,base_dev_blog,cdp_launches"
+
+# Ranking threshold (0..1). Higher = fewer posts.
+NEWS_MIN_SCORE="0.5"
+
+# Required when NEWS_SOURCES includes rss
+# Comma-separated list of RSS/Atom feed URLs.
+NEWS_FEEDS=""
+
+# Required when NEWS_SOURCES includes github
+# Comma-separated list of GitHub Atom feed URLs.
+# Examples:
+# - https://github.com/base-org/node/releases.atom
+# - https://github.com/base-org/contracts/commits/main.atom
+NEWS_GITHUB_FEEDS=""
 
 # Used only when NEWS_MODE=daily
 NEWS_DAILY_HOUR_UTC="15"
