Add Moltbook + multi social posting

--- a/based-intern/.env.example
+++ b/based-intern/.env.example
@@ -100,6 +100,10 @@ ROUTER_TYPE="unknown"
 # Social posting
 # =========================
 SOCIAL_MODE="none"
+
+# If SOCIAL_MODE="multi", post to multiple targets.
+# Comma-separated list of: x_api, playwright, moltbook
+SOCIAL_MULTI_TARGETS="x_api,moltbook"
 HEADLESS="true"
 X_USERNAME=""
 X_PASSWORD=""
@@ -119,6 +123,34 @@ X_ACCESS_SECRET=""
 # Requires X_SOCIAL_MODE=x_api and X API credentials above
 X_PHASE1_MENTIONS="false"
 X_POLL_MINUTES="2"
+
+# =========================
+# Moltbook (optional)
+# =========================
+# Moltbook skill spec: https://www.moltbook.com/skill.md
+# IMPORTANT: Only use www.moltbook.com; redirects can strip Authorization headers.
+
+# Enable Moltbook integration (must be true when SOCIAL_MODE=moltbook)
+MOLTBOOK_ENABLED="false"
+
+# API base (from skill.md)
+MOLTBOOK_BASE_URL="https://www.moltbook.com/api/v1"
+
+# Auth mode:
+# - bearer: Authorization: Bearer <key>
+# - apiKey: same header, but key may be sourced from env and/or session.json
+# - cookie: sends Cookie header (only if you have cookies; not described in skill.md currently)
+MOLTBOOK_AUTH_MODE="bearer"
+
+# Optional: provide API key via env (recommended to instead use the CLI which writes session.json)
+MOLTBOOK_API_KEY=""
+
+# Auth artifacts on disk (gitignored)
+MOLTBOOK_COOKIE_PATH="data/moltbook/cookies.json"
+MOLTBOOK_SESSION_PATH="data/moltbook/session.json"
+
+# Optional: custom user agent
+MOLTBOOK_USER_AGENT="BasedIntern/1.0"
 
 # =========================
 # LLM (optional)
