Railway: add control plane + OpenClaw gateway
- Add token-protected control server (status/tick)\n- Add OpenClaw gateway Dockerfile + Railway attach docs\n- Add control client script + ops skill updates\n- Update Docker base to Node 24

--- a/based-intern/.gitignore
+++ b/based-intern/.gitignore
@@ -23,3 +23,14 @@ data/moltbook/skill.md
 data/moltbook/cookies.json
 data/moltbook/session.json
 
+# OpenClaw workspace templates (local, never commit)
+AGENTS.md
+BOOTSTRAP.md
+HEARTBEAT.md
+IDENTITY.md
+SOUL.md
+TOOLS.md
+USER.md
+MEMORY.md
+memory/
+
