--- a/based-intern/.env.example
+++ b/based-intern/.env.example
@@ -185,18 +185,19 @@ NEWS_REQUIRE_SOURCE_WHITELIST="true"
 # Comma-separated list of supported sources:
 # - defillama: DeFiLlama snapshot (Base TVL + top protocols)
 # - github: GitHub Atom feeds (releases/commits)
-# - rss: RSS/Atom feeds (generic)
-# - base_blog: https://blog.base.org/
-# - base_dev_blog: https://blog.base.dev/
-# - cdp_launches: https://www.coinbase.com/developer-platform/discover/launches
-NEWS_SOURCES="defillama,github,rss,base_blog,base_dev_blog,cdp_launches"
+# - rss: RSS/Atom feeds (generic) - recommended for Base blog via Mirror
+# - base_blog: [DEPRECATED - returns 403] https://blog.base.org/
+# - base_dev_blog: [DEPRECATED - returns 403] https://blog.base.dev/
+# - cdp_launches: [DEPRECATED - returns 403] Coinbase CDP
+NEWS_SOURCES="defillama,github,rss"
 
 # Ranking threshold (0..1). Higher = fewer posts.
 NEWS_MIN_SCORE="0.5"
 
 # Required when NEWS_SOURCES includes rss
 # Comma-separated list of RSS/Atom feed URLs.
-NEWS_FEEDS=""
+# Default includes Base official blog via Mirror (no bot protection)
+NEWS_FEEDS="https://mirror.xyz/base.eth/feed/atom"
 
 # Required when NEWS_SOURCES includes github
 # Comma-separated list of GitHub Atom feed URLs.
