fix: use 'lan' instead of '0.0.0.0' for gateway.bind
- OpenClaw validates bind values, 'lan' is correct for Railway
- Fixes: gateway.bind: Invalid input error

--- a/Dockerfile.openclaw
+++ b/Dockerfile.openclaw
@@ -34,7 +34,7 @@ RUN mkdir -p /root/.openclaw && cat > /root/.openclaw/openclaw.json <<'EOF'
 {
   "gateway": {
     "mode": "remote",
-    "bind": "0.0.0.0",
+    "bind": "lan",
     "port": 8080
   },
   "skills": {
