--- a/Dockerfile.openclaw
+++ b/Dockerfile.openclaw
@@ -33,7 +33,7 @@ RUN npm install -g openclaw@2026.1.30
 RUN mkdir -p /root/.openclaw && cat > /root/.openclaw/openclaw.json <<'EOF'
 {
   "gateway": {
-    "mode": "remote",
+    "mode": "local",
     "bind": "lan",
     "port": 8080
   },
