docs: document OpenClaw announcement toggle

--- a/based-intern/.env.example
+++ b/based-intern/.env.example
@@ -124,6 +124,12 @@ X_ACCESS_SECRET=""
 X_PHASE1_MENTIONS="false"
 X_POLL_MINUTES="2"
 
+# Optional: One-shot OpenClaw announcement
+# Set to "true" to post the announcement about Based Intern being managed by an
+# external OpenClaw agent. After posting, remove this env var or set to "false"
+# to prevent duplicate posts on Railway redeploys (ephemeral storage).
+OPENCLAW_ANNOUNCEMENT_ENABLED="false"
+
 # =========================
 # Moltbook (optional)
 # =========================
@@ -217,4 +223,3 @@ NEWS_MAX_ITEMS_CONTEXT="8"
 # =========================
 CDP_API_KEY_NAME=""
 CDP_API_KEY_PRIVATE_KEY=""
-
