chore: remove Playwright X posting mode
Removes the Playwright-based X posting path and cookie tooling, strips Playwright from deps and Docker builds, and updates config/docs to use x_api/moltbook only.

--- a/based-intern/.env.example
+++ b/based-intern/.env.example
@@ -102,18 +102,10 @@ ROUTER_TYPE="unknown"
 SOCIAL_MODE="none"
 
 # If SOCIAL_MODE="multi", post to multiple targets.
-# Comma-separated list of: x_api, playwright, moltbook
+# Comma-separated list of: x_api, moltbook
 SOCIAL_MULTI_TARGETS="x_api,moltbook"
-HEADLESS="true"
-X_USERNAME=""
-X_PASSWORD=""
-# Prefer cookies to reduce login friction
-X_COOKIES_PATH="./x_cookies.json"
 
-# Optional: provide cookies via env (Railway-friendly). Base64-encoded JSON.
-X_COOKIES_B64=""
-
-# Optional: X API mode (experimental)
+# X API mode (recommended)
 X_API_KEY=""
 X_API_SECRET=""
 X_ACCESS_TOKEN=""
