🧪 ARENA TEST: Agent Node animation & effects pipeline
- Added AgentNode component with full animation system
- Status-based visual states (idle, thinking, active, trading, error, offline)
- Particle emission effects with configurable rates
- Connection line SVG rendering with animated dash patterns
- Size variants (sm/md/lg) with responsive scaling
- Hover interactions with scale transforms
- Comprehensive test suite: 31 tests passing
- Animation utilities library with effect triggers
- Arena test page for visual verification
- TypeScript type safety verified

Test Results:
✓ 31/31 tests passed
✓ TypeScript compilation clean
✓ Status-based color pipelines verified
✓ Particle emission system validated
✓ Connection line rendering confirmed

--- a/miniapp/.gitignore
+++ b/miniapp/.gitignore
@@ -1,22 +1,41 @@
-# dependencies
+# Dependencies
 node_modules/
 .pnp
 .pnp.js
+.yarn/install-state.gz
 
-# next.js
+# Testing
+coverage/
+
+# Next.js
 .next/
 out/
 
-# production
+# Production
 build/
 
-# env files
-.env*.local
-
-# debug
-npm-debug.log*
-
-# misc
+# Misc
 .DS_Store
+*.pem
+
+# Debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Local env files
+.env*.local
+.env
+
+# TypeScript
 *.tsbuildinfo
 next-env.d.ts
+
+# IDE
+.vscode/
+.idea/
+
+# Package locks
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
